Publishing-Tracker/apps/ui-react/publishing-tracker-ui/test_error_v5.txt
FAIL src/pages/AddBookPage.test.tsx
  ΓùÅ Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     ΓÇó If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     ΓÇó If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     ΓÇó To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     ΓÇó If you need a custom transformation, specify a "transform" option in your config.
     ΓÇó If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Github\PublishingTracker\Publishing-Tracker\apps\ui-react\publishing-tracker-ui\src\api\axiosClient.ts:6
        baseURL: import.meta.env?.VITE_API_BASE_URL || '',
                        ^^^^

    SyntaxError: Cannot use 'import.meta' outside a module

    > 1 | import axiosClient from '../api/axiosClient';
        | ^
      2 | import { Book, CreateBook, UpdateBook, BookPerformance } from '../types/book';
      3 |
      4 | const API_URL = '/api/books';

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1318:40)
      at Object.<anonymous> (src/services/bookService.ts:1:1)
      at Object.<anonymous> (src/pages/AddBookPage.tsx:6:1)
      at Object.<anonymous> (src/pages/AddBookPage.test.tsx:5:1)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        2.414 s
Ran all test suites matching src/pages/AddBookPage.test.tsx.
